JDK-8302459: add explicit -TieredCompilation to tests